my log of 14th day

--- a/7. Music Player/index.html
+++ b/7. Music Player/index.html
@@ -8,6 +8,7 @@
 
 <!-- Music from Free Music Archive -->
 <!-- http://freemusicarchive.org/music/Marcel_Pequel/From_One_To_Nine/ -->
+<!-- Design from here: https://dribbble.com/shots/2315906-Music-player-PSD-freebie-dailyui-Day-009 -->
 
 <body>
     <div class="c-containter">
