fix: body not 100% issue in mobile version

--- a/7. Music Player/index.html
+++ b/7. Music Player/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <head>
     <title>Music Player</title>
@@ -55,6 +55,7 @@
                 </div>
             </section>
         </div>
+        <p class="disclaimer">Music by Marcel Pequel and audio from <a href="http://freemusicarchive.org/music/Marcel_Pequel/From_One_To_Nine/" target="_blank">Free Music Archive</a>. Design idea from <a href="`https://dribbble.com/shots/2315906-Music-player-PSD-freebie-dailyui-Day-009" rel="noopener">Dima Blover</a></p>
     </div>
     
     <link href="https://fonts.googleapis.com/css?family=Lato|Mukta" rel="stylesheet"> 
