add social tag in music player

--- a/7. Music Player/index.html
+++ b/7. Music Player/index.html
@@ -2,6 +2,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta property="og:title" content="Music Player" >
+<meta property="og:url" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/index.html">
+<meta property="og:image" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player//img/musicplayer.jpg">
+<meta property="og:description" content="Music Player created by javascript, html and css." >
 <head>
     <title>Music Player</title>
 </head>
