--- a/7. Music Player/index.html
+++ b/7. Music Player/index.html
@@ -6,6 +6,15 @@
 <meta property="og:url" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/index.html">
 <meta property="og:image" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player//img/musicplayer.jpg">
 <meta property="og:description" content="Music Player created by javascript, html and css." >
+
+<!-- Twitter Card data --> 
+<meta name="twitter:card" content="summary_large_image"> 
+<meta name="twitter:site" content="@snowleo208"> 
+<meta name="twitter:title" content="Music Player"> 
+<meta name="twitter:description" content="Music Player created by javascript, html and css."> 
+<meta name="twitter:creator" content="@snowleo208"> 
+<meta name="twitter:image:src" content=" https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/index.html">
+
 <head>
     <title>Music Player</title>
 </head>
