fix: social tag broken link and add variable to all control elements

--- a/7. Music Player/index.html
+++ b/7. Music Player/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta property="og:title" content="Music Player" >
 <meta property="og:url" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/index.html">
-<meta property="og:image" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player//img/musicplayer.jpg">
+<meta property="og:image" content="https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/img/musicplayer.jpg">
 <meta property="og:description" content="Music Player created by javascript, html and css." >
 
 <!-- Twitter Card data --> 
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="Music Player"> 
 <meta name="twitter:description" content="Music Player created by javascript, html and css."> 
 <meta name="twitter:creator" content="@snowleo208"> 
-<meta name="twitter:image:src" content=" https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/index.html">
+<meta name="twitter:image:src" content=" https://snowleo208.github.io/100-Days-of-Code/7.%20Music%20Player/img/musicplayer.jpg">
 
 <head>
     <title>Music Player</title>
@@ -44,7 +44,7 @@
                     <p class="music-time__current"></p>
                     <p class="music-time__last"></p>
                 </div>
-                <div class="music-bar">
+                <div class="music-bar" id="progress">
                     <div id="length"></div>
                 </div>
                 <div class="music-order">
