add: loop one function in music player

--- a/7. Music Player/index.html
+++ b/7. Music Player/index.html
@@ -68,7 +68,7 @@
                 </div>
             </section>
         </div>
-        <p class="disclaimer">Music by Marcel Pequel and audio from <a href="http://freemusicarchive.org/music/Marcel_Pequel/From_One_To_Nine/" target="_blank">Free Music Archive</a>. Design idea from <a href="https://dribbble.com/shots/2315906-Music-player-PSD-freebie-dailyui-Day-009" rel="noopener">Dima Blover</a></p>
+        <p class="disclaimer">Music by Marcel Pequel and audio from <a href="http://freemusicarchive.org/music/Marcel_Pequel/From_One_To_Nine/" target="_blank" rel="noopener">Free Music Archive</a>. Design idea from <a href="https://dribbble.com/shots/2315906-Music-player-PSD-freebie-dailyui-Day-009" target="_blank" rel="noopener">Dima Blover</a></p>
     </div>
     
     <link href="https://fonts.googleapis.com/css?family=Lato|Mukta" rel="stylesheet"> 
