--- a/9. Quiz/index.html
+++ b/9. Quiz/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz</title>
 </head>
+
 <body>
     <section id="app"></section>
-<script type="text/javascript" src="./dist/vendor.b85b2.js"></script><script type="text/javascript" src="./dist/client.fe457.js"></script></body>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans" rel="stylesheet">
+<script type="text/javascript" src="./dist/vendor.b85b2.js"></script><script type="text/javascript" src="./dist/client.c5aa4.js"></script></body>
+
 </html>
