add: quiz images and finished result page of quiz

--- a/9. Quiz/index.html
+++ b/9. Quiz/index.html
@@ -11,6 +11,6 @@
 <body>
     <section id="app"></section>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans" rel="stylesheet">
-<script type="text/javascript" src="./dist/vendor.bde3e.js"></script><script type="text/javascript" src="./dist/client.d358d.js"></script></body>
+<script type="text/javascript" src="./dist/vendor.39b8a.js"></script><script type="text/javascript" src="./dist/client.62cc7.js"></script></body>
 
 </html>
