fix: index.html to build version

--- a/9. Quiz/index.html
+++ b/9. Quiz/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz</title>
-</head>
+<link href="./dist/style.c0092.css" rel="stylesheet"></head>
 
 <body>
     <section id="app"></section>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans" rel="stylesheet">
-<script type="text/javascript" src="./dist/vendor.39b8a.js"></script><script type="text/javascript" src="./dist/client.62cc7.js"></script></body>
+<script type="text/javascript" src="./dist/vendor.e4e87.js"></script><script type="text/javascript" src="./dist/client.77bb1.js"></script></body>
 
 </html>
